fix color default
now no color is default, can be overriden by ENV or commandline option

--- a/buku.1
+++ b/buku.1
@@ -236,6 +236,9 @@ Output data formatted as JSON, works with --print output and search results.
 .BI \--colors " COLORS"
 Set output colors. Refer to the \fBCOLORS\fR section below for details.
 .TP
+.BI \--color
+Set output colors to default, Refer to the \fBCOLORS\fR section below for details.
+.TP
 .BI \--nc
 Disable color output in all messages. Useful on terminals which can't handle ANSI color codes or scripted environments.
 .TP
